--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -213,7 +213,9 @@ window.markmap = {
     }
 
     window.addEventListener("CookieConsentDeclaration", function () {
+      console.log("CookieConsentDeclaration");
       if (hasConsent()) {
+        console.log("Cookiebot has consent, loading Inkeep");
         loadInkeep();
       }
     });
