--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -130,17 +130,8 @@ hugo.IsProduction -}}{{- if .Site.Config.Services.GoogleAnalytics.ID -}}
 <!-- End Google Tag Manager -->
 <!-- Start Clarity Tooling (Cookiebot-gated) -->
 <script type="text/javascript">
-  window.addEventListener('CookieConsentDeclaration', function () {
-    console.log("CookieConsentDeclaration fired, attemptint to set viam_version cookie");
-    console.log("window.Cookiebot", window.Cookiebot);
-    console.log("window.Cookiebot.consents", window.Cookiebot.consent);
-    console.log("window.Cookiebot.consents.necessary", window.Cookiebot.consent.necessary);
-    if (window.Cookiebot && window.Cookiebot.consents && window.Cookiebot.consent) {
-      var maxAge = 60 * 60 * 24 * 365; // 1 year
-      document.cookie = 'viam_version=1;path=/;max-age=' + maxAge;
-    }
-
-    if (window.Cookiebot && window.Cookiebot.consents.marketing) {
+  window.addEventListener('CookiebotOnAccept', function () {
+    if (window.Cookiebot && window.Cookiebot.consent.marketing) {
       (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
         t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
