--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -130,7 +130,7 @@ hugo.IsProduction -}}{{- if .Site.Config.Services.GoogleAnalytics.ID -}}
 <!-- End Google Tag Manager -->
 <!-- Start Clarity Tooling (Cookiebot-gated) -->
 <script type="text/javascript">
-  window.addEventListener('CookiebotOnAccept', function () {
+  window.addEventListener('CookiebotOnConsentReady', function () {
     if (window.Cookiebot && window.Cookiebot.consent.marketing) {
       (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
