--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -147,7 +147,7 @@ window.markmap = {
         host === "localhost" ||
         host === "127.0.0.1" ||
         host === "[::1]" ||
-        host.contains("viam-docs.netlify.app")
+        host.includes("viam-docs.netlify.app")
       );
     }
 
